# datafun-04-notebooks

./: AGENTS.md  CITATION.cff  README.md  mkdocs.yaml  pyproject.toml
.devcontainer/: devcontainer_OPTION.json
.github/: dependabot.yml
.github/workflows/: ci-basic-mkdocs.yml  deploy-mkdocs.yml  links.yml
data/raw/: README.md
docs/: RESOURCES.md  TROUBLESHOOTING.md  index.md
notebooks/: app_danilotraconis.ipynb  app_danilotraconis_titanic.ipynb  eda_case.ipynb
src/datafun_04_notebooks/: app_case.py
tests/: test_app_case.py
