# ============================================================
# pyproject.toml (Python, MkDocs, and Notebooks project configuration)
# ============================================================
# VARIANT: python-mkdocs-nb
# SOURCE: https://github.com/denisecase/templates

# REQ.PYTHON: Python projects MUST include pyproject.toml as the single source of truth.
# WHY: Centralizes project configuration.

[project]
name = "datafun-04-notebooks" # CUSTOM: Package distribution name (use lowercase and dashes).
readme = "README.md"
requires-python = ">=3.14"
version = "0.1.0"

dependencies = [
    # REQ.DEPS: External packages used by the project code.
    "datafun-toolkit>=0.9.5",
    "ipykernel>=7.1.0",
    "ipython>=9.9.0",
    "pandas>=3.0.0",
    "scikit-learn>=1.3.0",
    "seaborn>=0.13.0",
    "matplotlib>=3.8.0"
]


[project.optional-dependencies]
dev = [
    # REQ.DEV.DEPS: External packages used for linting, testing, type checking, etc.
    "bandit>=1.7.5",
    "packaging>=26.0",
    "pre-commit>=4",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pyright>=1.1",
    "ruff>=0.9",
    "validate-pyproject>=0.11.0",
]

docs = [
    # REQ.DOCS.DEPS: External packages used to generate project documentation.
    "mike>=2.1.3",
    "mkdocs>=1.5",
    "mkdocs-material>=9",
    "mkdocs-static-i18n>=1.3.0",
    "mkdocstrings[python]>=1.0.2",
]

# === PYRIGHT (TYPE CHECKING HELPS FIND COMMON ERRORS BEFORE THE CODE RUNS) ===

[tool.pyright]
# CUSTOM: Pyright configuration for static type checking.
# This configuration is NOT enforced by CI or pre-commit.
# It is provided for instructors and advanced users who
# explicitly run pyright. Students are NOT required to use it.
# WHY: Strict type checking helps catch bugs early.

typeCheckingMode = "strict"
pythonVersion = "3.14"
include = ["src"]
extraPaths = ["src"]
exclude = [ "**/node_modules", "**/.*", ".venv","**/__pycache__","dist","build"]

# Diagnostics (type-system focused)
reportMissingImports = "warning"
reportMissingTypeStubs = "warning"
reportIncompatibleVariableOverride = "warning"
reportIncompatibleMethodOverride = "warning"
reportOptionalSubscript = "warning"

# Reduce noise
reportPrivateUsage = "none"
useLibraryCodeForTypes = false

# Reduce more associated with EDA
reportUnknownMemberType = "none"
reportUnknownArgumentType = "none"
reportUnknownParameterType = "none"
reportUnknownVariableType = "none"
reportUnknownReturnType = "none"
reportUnknownLambdaType = "none"
reportUnknownNamedArgumentType = "none"

# Environment resolution
venv = ".venv"
venvPath = "."

# === PYTEST (VERIFY LOGIC) ===

[tool.pytest.ini_options]
# WHY: Ensure tests are discoverable and coverage is visible.
minversion = "7.0"
testpaths = ["tests"]
addopts = " --cov=src --cov-report=term-missing"

# === RUFF (PYTHON FORMATTING AND LINTING) ===

[tool.ruff]
# WHY: Ruff provides fast linting and formatting with deterministic output.
exclude = [
    ".eggs",
    "*.egg-info",
    ".ruff_cache",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "site",
]
line-length = 88 # WHY: PEP 8 standard line length, wrap when possible.
preview = false # WHY: Stable features only; avoid preview features.
target-version = "py313" # WHY: Match latest supported Python version.
unsafe-fixes = false # WHY: Avoid potentially unsafe automatic fixes.

[tool.ruff.format]
# WHY: Formatter choices should be stable to keep diffs small and predictable.
indent-style = "space" # See also .gitattributes for indent style.
line-ending = "auto" # Match existing files and let .gitattributes handle it.
quote-style = "preserve" # Preserve existing quote styles to minimize churn.

[tool.ruff.lint]
# WHY: Professional baseline rules without requiring advanced refactors.
select = [
    "E",   # Basic syntax and structural correctness
    "F",   # Undefined names and unused imports
    "W",   # Warnings that catch easy issues early
    "I",   # Deterministic import ordering
    "UP",  # Modern Python constructs
    "B",   # Common bug patterns
    # "PTH", # Prefer pathlib patterns
]
ignore = [
  "E501", # Final line length handled by formatter
]

[tool.ruff.lint.isort]
# WHY: Ordering imports helps keep code diffs (differences) readable.
force-sort-within-sections = true

[tool.ruff.lint.per-file-ignores]
# WHY: Some files MUST NOT undergo linting or automated fixes.
"**/__init__.py" = ["D104", "F401"]
"tests/**/*.py" = ["D", "B018", "B011","S101"]
"src/**/py.typed" = ["ALL"]
"**/*.log" = ["ALL"]

# === BUILD SYSTEM ===

# REQ.BUILD:
# - `build-backend` must be a build backend (setuptools or hatchling).

[build-system]
# WHY: Build system needed to create distributable packages.
# CUSTOM: Using scm for dynamic version management.
requires = [
    "setuptools>=80",
    "setuptools_scm>=9.2.2",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true # WHY: Ensure non-code files are included in distributions.
package-dir = {"" = "src"} # WHY: src-layout keeps code separate from config and docs.

[tool.setuptools.package-data]
"datafun_toolkit" = ["py.typed", "*.yaml"]

[tool.setuptools.packages.find]
where = ["src"] # WHY: Explicitly define package discovery location.

[tool.setuptools_scm]
tag_regex = "^v(?P<version>\\d+\\.\\d+\\.\\d+)$" # WHY: Match tags like v1.2.3 for versioning.
fallback_version = "0.0.1"
local_scheme = "no-local-version"
version_file = "src/datafun_toolkit/_version.py"
